update 5 install mysql

--- a/phpinstall.yml
+++ b/phpinstall.yml
@@ -69,6 +69,6 @@
 
       - name: Create my.cnf
         template:
-          src: templates/mysql/my.cnf.j2
+          src: template/mysql/my.cnf.j2
           dest: /root/.my.cnf
         when: mysql_new_root_pass.changed
