--- a/phpinstall.yml
+++ b/phpinstall.yml
@@ -84,4 +84,11 @@
           name: nginx
           state: started
 
+      - name: create nginx config
+          template:
+            src: templates/nginx/default.j2
+            dest: /etc/nginx/sites-available/default
+          notify: restart nginx
+
+
 ...
