--- a/phpinstall.yml
+++ b/phpinstall.yml
@@ -86,7 +86,7 @@
 
       - name: create nginx config
           template:
-            src: templates/nginx/default.j2
+            src: template/nginx/default.j2
             dest: /etc/nginx/sites-available/default
           notify: restart nginx
 
