--- a/phpinstall.yml
+++ b/phpinstall.yml
@@ -83,12 +83,20 @@
         service:
           name: nginx
           state: started
-#
+#nginx config
       - name: create nginx config
         template:
           src: template/nginx/default.j2
           dest: /etc/nginx/sites-available/default
-          
+        notify: restart nginx
+
+
+    handlers:
+      - name:  restart nginx
+        service:
+          name: nginx
+          state: restarted
+
 
 
 ...
