--- a/phpinstall.yml
+++ b/phpinstall.yml
@@ -86,6 +86,11 @@
           dest: /etc/nginx/sites-available/default
         notify: restart nginx
 
+      - name: create project folder
+        file:
+          path: /var/www/book.example.com
+          state: directory
+
 #HANDLERS
     handlers:
       - name:  restart nginx
