--- a/phpinstall.yml
+++ b/phpinstall.yml
@@ -91,13 +91,26 @@
           path: /var/www/book.example.com
           state: directory
 
+#wordpress
+      - name: Get WordPress checksum
+        uri:
+          url: https://wordpress.org/latest.zip.sha1
+          return_content: true
+        register: wp_checksum
+
+      - name: Download Wordpress
+        get_url:
+          url: https://wordpress.org/latest.zip
+          dest: /tmp/wordpress.zip
+          checksum: "sha1:{{wp_checksum.content}}"
+
+
+
 #HANDLERS
     handlers:
-      - name:  restart nginx
+      - name: restart nginx
         service:
           name: nginx
           state: restarted
-
-
 
 ...
