--- a/phpinstall.yml
+++ b/phpinstall.yml
@@ -104,7 +104,12 @@
           dest: /tmp/wordpress.zip
           checksum: "sha1:{{wp_checksum.content}}"
 
-
+      - name: Unzip Wordpress
+        unarchive:
+          src: /tmp/wordpress.zip
+          dest: /tmp
+          remote_src: yes
+          creates: /tmp/wordpress/wp-settings.php
 
 #HANDLERS
     handlers:
