--- a/phpinstall.yml
+++ b/phpinstall.yml
@@ -4,6 +4,12 @@
     become: true
     hosts: wordpress
     tasks:
+
+#unzip
+      - name: install unzip package
+        package:
+          name: unzip
+          state: present
 # PHP
       - name: Add the ondrej PHP PPA
         apt_repository:
