--- a/phpinstall.yml
+++ b/phpinstall.yml
@@ -113,9 +113,11 @@
       - name: Unzip Wordpress
         unarchive:
           src: /tmp/wordpress.zip
-          dest: /tmp
+          dest: /var/www
           remote_src: yes
-          creates: /tmp/wordpress/wp-settings.php
+          creates: /var/www/wordpress/wp-settings.php
+
+
 
 #HANDLERS
     handlers:
