--- a/phpinstall.yml
+++ b/phpinstall.yml
@@ -125,10 +125,10 @@
           password: bananas
           priv: wordpress.*:ALL
 #db config
-      - name: Create wp-config
-        template:
-          src: template/wordpress/wp-config3.php.j2
-          dest: /var/www/wordpress/wp-config.php
+      #- name: Create wp-config
+        #template:
+        #  src: template/wordpress/wp-config3.php.j2
+        #  dest: /var/www/wordpress/wp-config.php
 
 #HANDLERS
     handlers:
