--- a/phpinstall.yml
+++ b/phpinstall.yml
@@ -5,29 +5,29 @@
     hosts: wordpress
     tasks:
 
-#unzip
-      - name: install unzip package
-        package:
-          name: unzip
-          state: present
-# PHP
-      - name: Add the ondrej PHP PPA
-        apt_repository:
-          repo: 'ppa:ondrej/php'
-        ignore_errors: true
-      - name: Install PHP
-        package:
-          name: "{{ item }}"
-          state: present
-        loop:
-          - php
-          - php-fpm
-          - php-mysql
-          - php-xml
-      - name: Remove apache2
-        package:
-          name: apache2
-          state: absent
+# #unzip
+#       - name: install unzip package
+#         package:
+#           name: unzip
+#           state: present
+# # PHP
+#       - name: Add the ondrej PHP PPA
+#         apt_repository:
+#           repo: 'ppa:ondrej/php'
+#         ignore_errors: true
+#       - name: Install PHP
+#         package:
+#           name: "{{ item }}"
+#           state: present
+#         loop:
+#           - php
+#           - php-fpm
+#           - php-mysql
+#           - php-xml
+#       - name: Remove apache2
+#         package:
+#           name: apache2
+#           state: absent
 
 # MySQL
       - name: Install MySQL
