--- a/phpinstall.yml
+++ b/phpinstall.yml
@@ -29,68 +29,68 @@
 #           name: apache2
 #           state: absent
 
-# MySQL
-      - name: Install MySQL
-        package:
-          name: "{{ item }}"
-          state: present
-        loop:
-          - mysql-server
-          - python3-mysqldb
+# # MySQL
+#       - name: Install MySQL
+#         package:
+#           name: "{{ item }}"
+#           state: present
+#         loop:
+#           - mysql-server
+#           - python3-mysqldb
+#
+#       - name: Generate new root password
+#         command: openssl rand -hex 7
+#         args:
+#           creates: /root/.my.cnf
+#         register: mysql_new_root_pass
+#
+#       - name: Remove anonymous users
+#         mysql_user:
+#           name: ""
+#           state: absent
+#         when: mysql_new_root_pass.changed
+#
+#       - name: Remove test database
+#         mysql_db:
+#           name: test
+#           state: absent
+#         when: mysql_new_root_pass.changed
+#
+#       - name: Output new root password
+#         debug:
+#           msg: "New root password is {{mysql_new_root_pass.stdout}}"
+#         when: mysql_new_root_pass.changed
+#
+#       - name: Update root password
+#         mysql_user:
+#           name: root
+#           host: "{{ item }}"
+#           password: "{{ mysql_new_root_pass.stdout }}"
+#         loop:
+#           - "{{ ansible_hostname }}"
+#           - 127.0.0.1
+#           - ::1
+#           - localhost
+#         when: mysql_new_root_pass.changed
+#
+#       - name: Create my.cnf
+#         template:
+#           src: template/mysql/my.cnf.j2
+#           dest: /root/.my.cnf
+#         when: mysql_new_root_pass.changed
 
-      - name: Generate new root password
-        command: openssl rand -hex 7
-        args:
-          creates: /root/.my.cnf
-        register: mysql_new_root_pass
-
-      - name: Remove anonymous users
-        mysql_user:
-          name: ""
-          state: absent
-        when: mysql_new_root_pass.changed
-
-      - name: Remove test database
-        mysql_db:
-          name: test
-          state: absent
-        when: mysql_new_root_pass.changed
-
-      - name: Output new root password
-        debug:
-          msg: "New root password is {{mysql_new_root_pass.stdout}}"
-        when: mysql_new_root_pass.changed
-
-      - name: Update root password
-        mysql_user:
-          name: root
-          host: "{{ item }}"
-          password: "{{ mysql_new_root_pass.stdout }}"
-        loop:
-          - "{{ ansible_hostname }}"
-          - 127.0.0.1
-          - ::1
-          - localhost
-        when: mysql_new_root_pass.changed
-
-      - name: Create my.cnf
-        template:
-          src: template/mysql/my.cnf.j2
-          dest: /root/.my.cnf
-        when: mysql_new_root_pass.changed
-
-#NGINX
-      - name: Install NGINX
-        package:
-          name: nginx
-          state: present
-
-#nginx config
-      - name: create nginx config
-        template:
-          src: template/nginx/default.j2
-          dest: /etc/nginx/sites-available/default
-        notify: restart nginx
+# #NGINX
+#       - name: Install NGINX
+#         package:
+#           name: nginx
+#           state: present
+#
+# #nginx config
+#       - name: create nginx config
+#         template:
+#           src: template/nginx/default.j2
+#           dest: /etc/nginx/sites-available/default
+#         notify: restart nginx
 
 #wordpress
       - name: Get WordPress checksum
@@ -151,11 +151,11 @@
         when: db_exist.rc > 0
 
 
-#HANDLERS
-    handlers:
-      - name: restart nginx
-        service:
-          name: nginx
-          state: restarted
+# #HANDLERS
+#     handlers:
+#       - name: restart nginx
+#         service:
+#           name: nginx
+#           state: restarted
 
 ...
