--- a/roles/wp.nginx/handlers/main.yml
+++ b/roles/wp.nginx/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
 # handlers file for wp.nginx
+#HANDLERS
+handlers:
+  - name: restart nginx
+    service:
+      name: nginx
+      state: restarted
