--- a/roles/wp.wordpress/tasks/main.yml
+++ b/roles/wp.wordpress/tasks/main.yml
@@ -1,2 +1,59 @@
 ---
 # tasks file for wp.wordpress
+#wordpress
+- name: Get WordPress checksum
+  uri:
+    url: https://wordpress.org/latest.zip.sha1
+    return_content: true
+  register: wp_checksum
+
+- name: Download Wordpress
+  get_url:
+    url: https://wordpress.org/latest.zip
+    dest: /tmp/wordpress.zip
+    checksum: "sha1:{{wp_checksum.content}}"
+
+- name: Unzip Wordpress
+  unarchive:
+    src: /tmp/wordpress.zip
+    dest: /var/www
+    remote_src: yes
+    creates: /var/www/wordpress/wp-settings.php
+
+#create db
+- name: Create Wordpress MySQL database
+  mysql_db:
+    name: wordpress
+    state: present
+
+- name: Create WordPress mysql
+  mysql_user:
+    name: WordPress
+    host: localhost
+    password: bananas
+    priv: wordpress.*:ALL
+#db config
+- name: Create wp-config
+  template:
+    src: template/wordpress/wp-config3.php.j2
+    dest: /var/www/wordpress/wp-config.php
+
+- name: Does the database exist?
+  command: mysql -u root wordpress -e "SELECT ID FROM wordpress.wp_users LIMIT 1;"
+  register: db_exist
+  ignore_errors: true
+  changed_when: false
+
+- name: Copy Wordpress DB
+  template:
+    src: template/wordpress/wp-database.sql.j2
+    dest: /tmp/wp-database.sql
+  when: db_exist.rc > 0
+
+
+- name: Import Wordpress DB
+  mysql_db:
+    target: /tmp/wp-database.sql
+    state: import
+    name: wordpress
+  when: db_exist.rc > 0
