--- a/roles/wp.nginx/tasks/main.yml
+++ b/roles/wp.nginx/tasks/main.yml
@@ -9,6 +9,6 @@
 #nginx config
 - name: create nginx config
   template:
-    src: templates/nginx/default.j2
+    src: roles/wp.nginx/templates/nginx/default.j2
     dest: /etc/nginx/sites-available/default
   notify: restart nginx
